--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af50811c",
+   "id": "4e8d7636",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,13 @@
     "writer = pd.ExcelWriter(output_file_path, engine='openpyxl')\n",
     "\n",
     "# Write each sheet's data to the new Excel file\n",
-    "for\n"
+    "for sheet_name, data in grouped_data.items():\n",
+    "    data.to_excel(writer, sheet_name=sheet_name)\n",
+    "\n",
+    "# Save the Excel file\n",
+    "writer.save()\n",
+    "\n",
+    "print(f\"Grouped data with totals has been saved to {output_file_path}\")\n"
    ]
   },
   {
