--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e8d7636",
+   "id": "c92a8faa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,15 +24,18 @@
     "    grouped = df.groupby(['Mapped L3', 'Role_temp'])\n",
     "\n",
     "    # Count the occurrences of 'High' and 'Low' in the 'High/Low' column\n",
-    "    result = grouped['High/Low'].value_counts().unstack(fill_value=0)\n",
+    "    result = grouped['High/Low'].value_counts().unstack(fill_value=0).fillna(0)\n",
     "\n",
     "    # Add totals for each row ('Mapped L3', 'Role_temp')\n",
     "    result['Total'] = result.sum(axis=1)\n",
     "\n",
     "    # Add a totals row\n",
     "    total_row = result.sum(axis=0).to_frame().T\n",
-    "    total_row.index = ['Total']\n",
+    "    total_row.index = pd.MultiIndex.from_tuples([('Total', '')])\n",
     "    result = pd.concat([result, total_row])\n",
+    "\n",
+    "    # Reset the index to get 'Mapped L3' and 'Role_temp' as columns\n",
+    "    result.reset_index(inplace=True)\n",
     "\n",
     "    # Save the result in the dictionary\n",
     "    grouped_data[sheet_name] = result\n",
@@ -43,10 +46,10 @@
     "\n",
     "# Write each sheet's data to the new Excel file\n",
     "for sheet_name, data in grouped_data.items():\n",
-    "    data.to_excel(writer, sheet_name=sheet_name)\n",
+    "    data.to_excel(writer, sheet_name=sheet_name, index=False)\n",
     "\n",
-    "# Save the Excel file\n",
-    "writer.save()\n",
+    "# Close the Excel writer to save the file\n",
+    "writer.close()\n",
     "\n",
     "print(f\"Grouped data with totals has been saved to {output_file_path}\")\n"
    ]
