--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c92a8faa",
+   "id": "775813b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "\n",
     "# Create a dictionary to hold the processed data for each sheet\n",
     "grouped_data = {}\n",
+    "subtables = {}\n",
     "\n",
     "for sheet_name in excel_data.sheet_names:\n",
     "    # Read each sheet into a DataFrame\n",
@@ -37,21 +38,40 @@
     "    # Reset the index to get 'Mapped L3' and 'Role_temp' as columns\n",
     "    result.reset_index(inplace=True)\n",
     "\n",
+    "    # Rename columns 'Mapped L3' to 'Sub Function' and 'Role_temp' to 'Role Type'\n",
+    "    result.rename(columns={'Mapped L3': 'Sub Function', 'Role_temp': 'Role Type'}, inplace=True)\n",
+    "\n",
+    "    # Reorder columns: 'Sub Function', 'Role Type', 'Total', 'High', 'Low'\n",
+    "    result = result[['Sub Function', 'Role Type', 'Total', 'High', 'Low']]\n",
+    "\n",
     "    # Save the result in the dictionary\n",
     "    grouped_data[sheet_name] = result\n",
     "\n",
+    "    # Create subtables for each unique combination of 'Mapped L3' and 'Role_temp'\n",
+    "    for index, row in result.iterrows():\n",
+    "        subtable_data = df[(df['Mapped L3'] == row['Sub Function']) & (df['Role_temp'] == row['Role Type'])]\n",
+    "\n",
+    "        # Save subtable data\n",
+    "        subtables[(sheet_name, row['Sub Function'], row['Role Type'])] = subtable_data\n",
+    "\n",
     "# Create a new Excel writer object\n",
-    "output_file_path = 'grouped_data_with_totals.xlsx'  # Replace with your desired output file path\n",
+    "output_file_path = 'grouped_data_with_subtables.xlsx'  # Replace with your desired output file path\n",
     "writer = pd.ExcelWriter(output_file_path, engine='openpyxl')\n",
     "\n",
-    "# Write each sheet's data to the new Excel file\n",
+    "# Write each sheet's grouped data to the new Excel file\n",
     "for sheet_name, data in grouped_data.items():\n",
-    "    data.to_excel(writer, sheet_name=sheet_name, index=False)\n",
+    "    data.to_excel(writer, sheet_name=f\"{sheet_name}_count\", index=False)\n",
+    "    \n",
+    "    # Write subtables for the current sheet\n",
+    "    for key, subtable in subtables.items():\n",
+    "        if key[0] == sheet_name:\n",
+    "            subtable_sheet_name = f\"{sheet_name}_{key[1]}_{key[2]}\"\n",
+    "            subtable.to_excel(writer, sheet_name=subtable_sheet_name, index=False)\n",
     "\n",
     "# Close the Excel writer to save the file\n",
     "writer.close()\n",
     "\n",
-    "print(f\"Grouped data with totals has been saved to {output_file_path}\")\n"
+    "print(f\"Grouped data with subtables has been saved to {output_file_path}\")\n"
    ]
   },
   {
