--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "775813b2",
+   "id": "300da3f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,21 +38,22 @@
     "    # Reset the index to get 'Mapped L3' and 'Role_temp' as columns\n",
     "    result.reset_index(inplace=True)\n",
     "\n",
-    "    # Rename columns 'Mapped L3' to 'Sub Function' and 'Role_temp' to 'Role Type'\n",
-    "    result.rename(columns={'Mapped L3': 'Sub Function', 'Role_temp': 'Role Type'}, inplace=True)\n",
-    "\n",
-    "    # Reorder columns: 'Sub Function', 'Role Type', 'Total', 'High', 'Low'\n",
-    "    result = result[['Sub Function', 'Role Type', 'Total', 'High', 'Low']]\n",
+    "    # Ensure 'High' and 'Low' are present, if not add them with default 0 values\n",
+    "    if 'High' not in result.columns:\n",
+    "        result['High'] = 0\n",
+    "    if 'Low' not in result.columns:\n",
+    "        result['Low'] = 0\n",
+    "    result = result[['Mapped L3', 'Role_temp', 'Total', 'High', 'Low']]\n",
     "\n",
     "    # Save the result in the dictionary\n",
     "    grouped_data[sheet_name] = result\n",
     "\n",
     "    # Create subtables for each unique combination of 'Mapped L3' and 'Role_temp'\n",
-    "    for index, row in result.iterrows():\n",
-    "        subtable_data = df[(df['Mapped L3'] == row['Sub Function']) & (df['Role_temp'] == row['Role Type'])]\n",
-    "\n",
-    "        # Save subtable data\n",
-    "        subtables[(sheet_name, row['Sub Function'], row['Role Type'])] = subtable_data\n",
+    "    for _, row in result.iterrows():\n",
+    "        if row['Mapped L3'] != 'Total':  # Skip the total row\n",
+    "            subtable_data = df[(df['Mapped L3'] == row['Mapped L3']) & (df['Role_temp'] == row['Role_temp'])]\n",
+    "            # Save subtable data\n",
+    "            subtables[(sheet_name, row['Mapped L3'], row['Role_temp'])] = subtable_data\n",
     "\n",
     "# Create a new Excel writer object\n",
     "output_file_path = 'grouped_data_with_subtables.xlsx'  # Replace with your desired output file path\n",
