--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "300da3f2",
+   "id": "0889d877",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,10 +13,11 @@
     "file_path = 'your_excel_file.xlsx'  # Replace with your file path\n",
     "excel_data = pd.ExcelFile(file_path)\n",
     "\n",
-    "# Create a dictionary to hold the processed data for each sheet\n",
-    "grouped_data = {}\n",
-    "subtables = {}\n",
+    "# Create a Pandas Excel writer object\n",
+    "output_file_path = 'grouped_data_with_subtables.xlsx'  # Replace with your desired output file path\n",
+    "writer = pd.ExcelWriter(output_file_path, engine='openpyxl')\n",
     "\n",
+    "# Process each sheet in the Excel file\n",
     "for sheet_name in excel_data.sheet_names:\n",
     "    # Read each sheet into a DataFrame\n",
     "    df = pd.read_excel(excel_data, sheet_name=sheet_name)\n",
@@ -45,29 +46,25 @@
     "        result['Low'] = 0\n",
     "    result = result[['Mapped L3', 'Role_temp', 'Total', 'High', 'Low']]\n",
     "\n",
-    "    # Save the result in the dictionary\n",
-    "    grouped_data[sheet_name] = result\n",
+    "    # Create a copy of the original DataFrame to preserve its structure\n",
+    "    df_copy = df.copy()\n",
     "\n",
-    "    # Create subtables for each unique combination of 'Mapped L3' and 'Role_temp'\n",
+    "    # Iterate over each row in the grouped result\n",
     "    for _, row in result.iterrows():\n",
     "        if row['Mapped L3'] != 'Total':  # Skip the total row\n",
-    "            subtable_data = df[(df['Mapped L3'] == row['Mapped L3']) & (df['Role_temp'] == row['Role_temp'])]\n",
-    "            # Save subtable data\n",
-    "            subtables[(sheet_name, row['Mapped L3'], row['Role_temp'])] = subtable_data\n",
+    "            # Filter the original DataFrame based on 'Mapped L3' and 'Role_temp'\n",
+    "            subtable_data = df_copy[(df_copy['Mapped L3'] == row['Mapped L3']) & (df_copy['Role_temp'] == row['Role_temp'])]\n",
     "\n",
-    "# Create a new Excel writer object\n",
-    "output_file_path = 'grouped_data_with_subtables.xlsx'  # Replace with your desired output file path\n",
-    "writer = pd.ExcelWriter(output_file_path, engine='openpyxl')\n",
+    "            # Insert an empty row to separate subtables from the original data\n",
+    "            subtable_data = pd.concat([pd.DataFrame([{}]), subtable_data])\n",
     "\n",
-    "# Write each sheet's grouped data to the new Excel file\n",
-    "for sheet_name, data in grouped_data.items():\n",
-    "    data.to_excel(writer, sheet_name=f\"{sheet_name}_count\", index=False)\n",
-    "    \n",
-    "    # Write subtables for the current sheet\n",
-    "    for key, subtable in subtables.items():\n",
-    "        if key[0] == sheet_name:\n",
-    "            subtable_sheet_name = f\"{sheet_name}_{key[1]}_{key[2]}\"\n",
-    "            subtable.to_excel(writer, sheet_name=subtable_sheet_name, index=False)\n",
+    "            # Get the index where the empty row was inserted\n",
+    "            empty_row_index = subtable_data.index[0]\n",
+    "\n",
+    "            # Write the grouped data and subtable to the original sheet\n",
+    "            with pd.ExcelWriter(output_file_path, engine='openpyxl', mode='a') as writer:\n",
+    "                result.to_excel(writer, sheet_name=sheet_name, startrow=empty_row_index, index=False)\n",
+    "                subtable_data.to_excel(writer, sheet_name=sheet_name, startrow=empty_row_index + len(result) + 2, index=False)\n",
     "\n",
     "# Close the Excel writer to save the file\n",
     "writer.close()\n",
