--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0889d877",
+   "id": "05f72a12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,63 +11,63 @@
     "\n",
     "# Read the Excel file\n",
     "file_path = 'your_excel_file.xlsx'  # Replace with your file path\n",
+    "output_file_path = 'grouped_data_with_subtables.xlsx'  # Replace with your desired output file path\n",
     "excel_data = pd.ExcelFile(file_path)\n",
     "\n",
     "# Create a Pandas Excel writer object\n",
-    "output_file_path = 'grouped_data_with_subtables.xlsx'  # Replace with your desired output file path\n",
-    "writer = pd.ExcelWriter(output_file_path, engine='openpyxl')\n",
+    "with pd.ExcelWriter(output_file_path, engine='openpyxl') as writer:\n",
+    "    for sheet_name in excel_data.sheet_names:\n",
+    "        # Read each sheet into a DataFrame\n",
+    "        df = pd.read_excel(excel_data, sheet_name=sheet_name)\n",
     "\n",
-    "# Process each sheet in the Excel file\n",
-    "for sheet_name in excel_data.sheet_names:\n",
-    "    # Read each sheet into a DataFrame\n",
-    "    df = pd.read_excel(excel_data, sheet_name=sheet_name)\n",
+    "        # Group the data by 'Mapped L3' and 'Role_temp'\n",
+    "        grouped = df.groupby(['Mapped L3', 'Role_temp'])\n",
     "\n",
-    "    # Group the data by 'Mapped L3' and 'Role_temp'\n",
-    "    grouped = df.groupby(['Mapped L3', 'Role_temp'])\n",
+    "        # Count the occurrences of 'High' and 'Low' in the 'High/Low' column\n",
+    "        result = grouped['High/Low'].value_counts().unstack(fill_value=0).fillna(0)\n",
     "\n",
-    "    # Count the occurrences of 'High' and 'Low' in the 'High/Low' column\n",
-    "    result = grouped['High/Low'].value_counts().unstack(fill_value=0).fillna(0)\n",
+    "        # Add totals for each row ('Mapped L3', 'Role_temp')\n",
+    "        result['Total'] = result.sum(axis=1)\n",
     "\n",
-    "    # Add totals for each row ('Mapped L3', 'Role_temp')\n",
-    "    result['Total'] = result.sum(axis=1)\n",
+    "        # Add a totals row\n",
+    "        total_row = result.sum(axis=0).to_frame().T\n",
+    "        total_row.index = pd.MultiIndex.from_tuples([('Total', '')])\n",
+    "        result = pd.concat([result, total_row])\n",
     "\n",
-    "    # Add a totals row\n",
-    "    total_row = result.sum(axis=0).to_frame().T\n",
-    "    total_row.index = pd.MultiIndex.from_tuples([('Total', '')])\n",
-    "    result = pd.concat([result, total_row])\n",
+    "        # Reset the index to get 'Mapped L3' and 'Role_temp' as columns\n",
+    "        result.reset_index(inplace=True)\n",
     "\n",
-    "    # Reset the index to get 'Mapped L3' and 'Role_temp' as columns\n",
-    "    result.reset_index(inplace=True)\n",
+    "        # Ensure 'High' and 'Low' are present, if not add them with default 0 values\n",
+    "        if 'High' not in result.columns:\n",
+    "            result['High'] = 0\n",
+    "        if 'Low' not in result.columns:\n",
+    "            result['Low'] = 0\n",
+    "        result = result[['Mapped L3', 'Role_temp', 'Total', 'High', 'Low']]\n",
     "\n",
-    "    # Ensure 'High' and 'Low' are present, if not add them with default 0 values\n",
-    "    if 'High' not in result.columns:\n",
-    "        result['High'] = 0\n",
-    "    if 'Low' not in result.columns:\n",
-    "        result['Low'] = 0\n",
-    "    result = result[['Mapped L3', 'Role_temp', 'Total', 'High', 'Low']]\n",
+    "        # Create a copy of the original DataFrame to preserve its structure\n",
+    "        df_copy = df.copy()\n",
     "\n",
-    "    # Create a copy of the original DataFrame to preserve its structure\n",
-    "    df_copy = df.copy()\n",
+    "        # Initialize start row for writing grouped data and subtables\n",
+    "        start_row = 0\n",
     "\n",
-    "    # Iterate over each row in the grouped result\n",
-    "    for _, row in result.iterrows():\n",
-    "        if row['Mapped L3'] != 'Total':  # Skip the total row\n",
-    "            # Filter the original DataFrame based on 'Mapped L3' and 'Role_temp'\n",
-    "            subtable_data = df_copy[(df_copy['Mapped L3'] == row['Mapped L3']) & (df_copy['Role_temp'] == row['Role_temp'])]\n",
+    "        # Write the grouped data to the sheet\n",
+    "        result.to_excel(writer, sheet_name=sheet_name, startrow=start_row, index=False)\n",
+    "        start_row += len(result) + 2  # Move to the next row after grouped data\n",
     "\n",
-    "            # Insert an empty row to separate subtables from the original data\n",
-    "            subtable_data = pd.concat([pd.DataFrame([{}]), subtable_data])\n",
+    "        # Create subtables for each unique combination of 'Mapped L3' and 'Role_temp'\n",
+    "        for _, row in result.iterrows():\n",
+    "            if row['Mapped L3'] != 'Total':  # Skip the total row\n",
+    "                # Filter the original DataFrame based on 'Mapped L3' and 'Role_temp'\n",
+    "                subtable_data = df_copy[(df_copy['Mapped L3'] == row['Mapped L3']) & (df_copy['Role_temp'] == row['Role_temp'])]\n",
     "\n",
-    "            # Get the index where the empty row was inserted\n",
-    "            empty_row_index = subtable_data.index[0]\n",
+    "                # Insert an empty row to separate subtables from the original data\n",
+    "                subtable_data = pd.concat([pd.DataFrame([{}]), subtable_data])\n",
     "\n",
-    "            # Write the grouped data and subtable to the original sheet\n",
-    "            with pd.ExcelWriter(output_file_path, engine='openpyxl', mode='a') as writer:\n",
-    "                result.to_excel(writer, sheet_name=sheet_name, startrow=empty_row_index, index=False)\n",
-    "                subtable_data.to_excel(writer, sheet_name=sheet_name, startrow=empty_row_index + len(result) + 2, index=False)\n",
+    "                # Write the subtable data to the sheet\n",
+    "                subtable_data.to_excel(writer, sheet_name=sheet_name, startrow=start_row, index=False)\n",
     "\n",
-    "# Close the Excel writer to save the file\n",
-    "writer.close()\n",
+    "                # Move to the next row after writing subtable data\n",
+    "                start_row += len(subtable_data) + 2  # Add extra space after each subtable\n",
     "\n",
     "print(f\"Grouped data with subtables has been saved to {output_file_path}\")\n"
    ]
