--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d304449d",
+   "id": "bc3285b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,30 +20,49 @@
     "        # Read each sheet into a DataFrame\n",
     "        df = pd.read_excel(excel_data, sheet_name=sheet_name)\n",
     "\n",
-    "        # Group the data by 'Mapped L3' only\n",
-    "        grouped = df.groupby('Mapped L3')\n",
+    "        # Group the data by 'Mapped L3' and 'Role_temp'\n",
+    "        grouped = df.groupby(['Mapped L3', 'Role_temp'])\n",
+    "\n",
+    "        # Count the occurrences of 'High' and 'Low' in the 'High/Low' column\n",
+    "        result = grouped['High/Low'].value_counts().unstack(fill_value=0).fillna(0)\n",
+    "\n",
+    "        # Add totals for each row ('Mapped L3', 'Role_temp')\n",
+    "        result['Total'] = result.sum(axis=1)\n",
+    "\n",
+    "        # Add a totals row\n",
+    "        total_row = result.sum(axis=0).to_frame().T\n",
+    "        total_row.index = pd.MultiIndex.from_tuples([('Total', '')])\n",
+    "        result = pd.concat([result, total_row])\n",
+    "\n",
+    "        # Reset the index to get 'Mapped L3' and 'Role_temp' as columns\n",
+    "        result.reset_index(inplace=True)\n",
+    "\n",
+    "        # Ensure 'High' and 'Low' are present, if not add them with default 0 values\n",
+    "        if 'High' not in result.columns:\n",
+    "            result['High'] = 0\n",
+    "        if 'Low' not in result.columns:\n",
+    "            result['Low'] = 0\n",
+    "        result = result[['Mapped L3', 'Role_temp', 'Total', 'High', 'Low']]\n",
     "\n",
     "        # Initialize start row for writing grouped data\n",
     "        start_row = 0\n",
     "\n",
-    "        # Iterate over each 'Mapped L3' group\n",
-    "        for mapped_l3, group_data in grouped:\n",
+    "        # Write the grouped data to the sheet\n",
+    "        result.to_excel(writer, sheet_name=sheet_name, startrow=start_row, index=False)\n",
+    "        start_row += len(result) + 2  # Move to the next row after grouped data\n",
+    "\n",
+    "        # Create subtables for each unique 'Mapped L3'\n",
+    "        unique_mapped_l3 = df['Mapped L3'].unique()\n",
+    "        for mapped_l3 in unique_mapped_l3:\n",
     "            # Skip 'Total' rows if present\n",
     "            if mapped_l3 == 'Total':\n",
     "                continue\n",
     "\n",
-    "            # Create subtable data for current 'Mapped L3'\n",
-    "            subtable_data = group_data.copy()\n",
+    "            # Filter the original DataFrame based on 'Mapped L3'\n",
+    "            subtable_data = df[df['Mapped L3'] == mapped_l3]\n",
     "\n",
     "            # Insert an empty row to separate subtables from the original data\n",
     "            subtable_data = pd.concat([pd.DataFrame([{}]), subtable_data])\n",
-    "\n",
-    "            # Write the grouped data to the sheet\n",
-    "            grouped_data = group_data.groupby('Role_temp').size().reset_index(name='Count')\n",
-    "            grouped_data.to_excel(writer, sheet_name=sheet_name, startrow=start_row, index=False)\n",
-    "\n",
-    "            # Move to the next row after writing grouped data\n",
-    "            start_row += len(grouped_data) + 2\n",
     "\n",
     "            # Write the subtable data to the sheet\n",
     "            subtable_data.to_excel(writer, sheet_name=sheet_name, startrow=start_row, index=False)\n",
