--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc3285b8",
+   "id": "901416c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,16 +59,40 @@
     "                continue\n",
     "\n",
     "            # Filter the original DataFrame based on 'Mapped L3'\n",
-    "            subtable_data = df[df['Mapped L3'] == mapped_l3]\n",
+    "            mapped_l3_data = df[df['Mapped L3'] == mapped_l3]\n",
     "\n",
-    "            # Insert an empty row to separate subtables from the original data\n",
-    "            subtable_data = pd.concat([pd.DataFrame([{}]), subtable_data])\n",
+    "            # Insert a heading for unique 'Mapped L3'\n",
+    "            mapped_l3_heading = f\"Unique L3 Value: {mapped_l3}\"\n",
+    "            worksheet = writer.sheets[sheet_name]\n",
+    "            worksheet.cell(row=start_row, column=1, value=mapped_l3_heading)\n",
     "\n",
-    "            # Write the subtable data to the sheet\n",
-    "            subtable_data.to_excel(writer, sheet_name=sheet_name, startrow=start_row, index=False)\n",
+    "            # Move to the next row after writing unique L3 heading\n",
+    "            start_row += 2\n",
     "\n",
-    "            # Move to the next row after writing subtable data\n",
-    "            start_row += len(subtable_data) + 2\n",
+    "            # Iterate over each unique 'Role_temp' for the current 'Mapped L3'\n",
+    "            unique_role_temp = mapped_l3_data['Role_temp'].unique()\n",
+    "            for role_temp in unique_role_temp:\n",
+    "                # Filter the data for the current 'Mapped L3' and 'Role_temp'\n",
+    "                subtable_data = mapped_l3_data[mapped_l3_data['Role_temp'] == role_temp]\n",
+    "\n",
+    "                # Insert a heading for 'Role_temp'\n",
+    "                role_temp_heading = f\"Role Type: {role_temp}\"\n",
+    "                worksheet.cell(row=start_row, column=1, value=role_temp_heading)\n",
+    "\n",
+    "                # Move to the next row after writing role_temp heading\n",
+    "                start_row += 2\n",
+    "\n",
+    "                # Insert an empty row to separate headings from subtable data\n",
+    "                worksheet.cell(row=start_row, column=1, value=\"\")\n",
+    "\n",
+    "                # Move to the next row after inserting empty row\n",
+    "                start_row += 1\n",
+    "\n",
+    "                # Write the subtable data to the sheet\n",
+    "                subtable_data.to_excel(writer, sheet_name=sheet_name, startrow=start_row, index=False)\n",
+    "\n",
+    "                # Move to the next row after writing subtable data\n",
+    "                start_row += len(subtable_data) + 2  # Add extra space after each subtable\n",
     "\n",
     "print(f\"Grouped data with subtables has been saved to {output_file_path}\")\n"
    ]
