--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,100 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1a1e5e24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from openpyxl import Workbook, load_workbook\n",
+    "\n",
+    "# Read the Excel file\n",
+    "file_path = 'your_excel_file.xlsx'  # Replace with your file path\n",
+    "output_file_path = 'grouped_data_with_subtables.xlsx'  # Replace with your desired output file path\n",
+    "excel_data = pd.ExcelFile(file_path)\n",
+    "\n",
+    "# Create a Pandas Excel writer object\n",
+    "with pd.ExcelWriter(output_file_path, engine='openpyxl') as writer:\n",
+    "    for sheet_name in excel_data.sheet_names:\n",
+    "        # Read each sheet into a DataFrame\n",
+    "        df = pd.read_excel(excel_data, sheet_name=sheet_name)\n",
+    "\n",
+    "        # Group the data by 'Mapped L3' and 'Role_temp'\n",
+    "        grouped = df.groupby(['Mapped L3', 'Role_temp'])\n",
+    "\n",
+    "        # Count the occurrences of 'High' and 'Low' in the 'High/Low' column\n",
+    "        result = grouped['High/Low'].value_counts().unstack(fill_value=0).fillna(0)\n",
+    "\n",
+    "        # Add totals for each row ('Mapped L3', 'Role_temp')\n",
+    "        result['Total'] = result.sum(axis=1)\n",
+    "\n",
+    "        # Add a totals row\n",
+    "        total_row = result.sum(axis=0).to_frame().T\n",
+    "        total_row.index = pd.MultiIndex.from_tuples([('Total', '')])\n",
+    "        result = pd.concat([result, total_row])\n",
+    "\n",
+    "        # Reset the index to get 'Mapped L3' and 'Role_temp' as columns\n",
+    "        result.reset_index(inplace=True)\n",
+    "\n",
+    "        # Ensure 'High' and 'Low' are present, if not add them with default 0 values\n",
+    "        if 'High' not in result.columns:\n",
+    "            result['High'] = 0\n",
+    "        if 'Low' not in result.columns:\n",
+    "            result['Low'] = 0\n",
+    "        result = result[['Mapped L3', 'Role_temp', 'High', 'Low', 'Total']]\n",
+    "\n",
+    "        # Write the grouped data to the sheet\n",
+    "        result.to_excel(writer, sheet_name=sheet_name, startrow=0, index=False)\n",
+    "        \n",
+    "        # Load the workbook and access the worksheet\n",
+    "        workbook = writer.book\n",
+    "        worksheet = workbook[sheet_name]\n",
+    "\n",
+    "        # Initialize start row for writing subtables\n",
+    "        start_row = len(result) + 2  # Move to the next row after grouped data\n",
+    "\n",
+    "        # Create subtables for each unique 'Mapped L3'\n",
+    "        unique_mapped_l3 = df['Mapped L3'].unique()\n",
+    "        for mapped_l3 in unique_mapped_l3:\n",
+    "            # Skip 'Total' rows if present\n",
+    "            if mapped_l3 == 'Total':\n",
+    "                continue\n",
+    "\n",
+    "            # Filter the original DataFrame based on 'Mapped L3'\n",
+    "            mapped_l3_data = df[df['Mapped L3'] == mapped_l3]\n",
+    "\n",
+    "            # Insert a heading for unique 'Mapped L3'\n",
+    "            mapped_l3_heading = f\"Unique L3 Value: {mapped_l3}\"\n",
+    "            worksheet.cell(row=start_row + 1, column=1, value=mapped_l3_heading)\n",
+    "\n",
+    "            # Move to the next row after writing unique L3 heading\n",
+    "            start_row += 2\n",
+    "\n",
+    "            # Iterate over each unique 'Role_temp' for the current 'Mapped L3'\n",
+    "            unique_role_temp = mapped_l3_data['Role_temp'].unique()\n",
+    "            for role_temp in unique_role_temp:\n",
+    "                # Filter the data for the current 'Mapped L3' and 'Role_temp'\n",
+    "                subtable_data = mapped_l3_data[mapped_l3_data['Role_temp'] == role_temp]\n",
+    "\n",
+    "                # Insert a heading for 'Role_temp'\n",
+    "                role_temp_heading = f\"Role Type: {role_temp}\"\n",
+    "                worksheet.cell(row=start_row + 1, column=1, value=role_temp_heading)\n",
+    "\n",
+    "                # Move to the next row after writing role_temp heading\n",
+    "                start_row += 2\n",
+    "\n",
+    "                # Write the subtable data to the sheet\n",
+    "                subtable_data.to_excel(writer, sheet_name=sheet_name, startrow=start_row, index=False, header=True)\n",
+    "\n",
+    "                # Move to the next row after writing subtable data\n",
+    "                start_row += len(subtable_data) + 1  # Add extra space after each subtable\n",
+    "\n",
+    "print(f\"Grouped data with subtables has been saved to {output_file_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "901416c8",
    "metadata": {},
    "outputs": [],
