--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a1e5e24",
+   "id": "f9b38da6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,10 @@
     "                subtable_data.to_excel(writer, sheet_name=sheet_name, startrow=start_row, index=False, header=True)\n",
     "\n",
     "                # Move to the next row after writing subtable data\n",
-    "                start_row += len(subtable_data) + 1  # Add extra space after each subtable\n",
+    "                start_row += len(subtable_data) + 1  # Add 1 line gap after each role_temp subtable\n",
+    "\n",
+    "            # Add a 2-line gap after each Mapped L3 section\n",
+    "            start_row += 2\n",
     "\n",
     "print(f\"Grouped data with subtables has been saved to {output_file_path}\")\n"
    ]
