--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9b38da6",
+   "id": "a2b840f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
     "            worksheet.cell(row=start_row + 1, column=1, value=mapped_l3_heading)\n",
     "\n",
     "            # Move to the next row after writing unique L3 heading\n",
-    "            start_row += 2\n",
+    "            start_row += 3  # 1 line gap before subtable data\n",
     "\n",
     "            # Iterate over each unique 'Role_temp' for the current 'Mapped L3'\n",
     "            unique_role_temp = mapped_l3_data['Role_temp'].unique()\n",
@@ -83,16 +83,16 @@
     "                worksheet.cell(row=start_row + 1, column=1, value=role_temp_heading)\n",
     "\n",
     "                # Move to the next row after writing role_temp heading\n",
-    "                start_row += 2\n",
+    "                start_row += 3  # 1 line gap before subtable data\n",
     "\n",
     "                # Write the subtable data to the sheet\n",
     "                subtable_data.to_excel(writer, sheet_name=sheet_name, startrow=start_row, index=False, header=True)\n",
     "\n",
     "                # Move to the next row after writing subtable data\n",
-    "                start_row += len(subtable_data) + 1  # Add 1 line gap after each role_temp subtable\n",
+    "                start_row += len(subtable_data) + 2  # 1 line gap after subtable data\n",
     "\n",
     "            # Add a 2-line gap after each Mapped L3 section\n",
-    "            start_row += 2\n",
+    "            start_row += 1  # Ensure at least 1 line gap after each L3 section\n",
     "\n",
     "print(f\"Grouped data with subtables has been saved to {output_file_path}\")\n"
    ]
