--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2b840f0",
+   "id": "3208f325",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65f9fdb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +63,9 @@
     "        # Initialize start row for writing subtables\n",
     "        start_row = len(result) + 2  # Move to the next row after grouped data\n",
     "\n",
+    "        # Create a list to store all subtables\n",
+    "        subtables_list = []\n",
+    "\n",
     "        # Create subtables for each unique 'Mapped L3'\n",
     "        unique_mapped_l3 = df['Mapped L3'].unique()\n",
     "        for mapped_l3 in unique_mapped_l3:\n",
@@ -67,10 +78,7 @@
     "\n",
     "            # Insert a heading for unique 'Mapped L3'\n",
     "            mapped_l3_heading = f\"Unique L3 Value: {mapped_l3}\"\n",
-    "            worksheet.cell(row=start_row + 1, column=1, value=mapped_l3_heading)\n",
-    "\n",
-    "            # Move to the next row after writing unique L3 heading\n",
-    "            start_row += 3  # 1 line gap before subtable data\n",
+    "            subtables_list.append((mapped_l3_heading, None))  # Append heading to list\n",
     "\n",
     "            # Iterate over each unique 'Role_temp' for the current 'Mapped L3'\n",
     "            unique_role_temp = mapped_l3_data['Role_temp'].unique()\n",
@@ -80,19 +88,19 @@
     "\n",
     "                # Insert a heading for 'Role_temp'\n",
     "                role_temp_heading = f\"Role Type: {role_temp}\"\n",
-    "                worksheet.cell(row=start_row + 1, column=1, value=role_temp_heading)\n",
+    "                subtables_list.append((role_temp_heading, None))  # Append heading to list\n",
     "\n",
-    "                # Move to the next row after writing role_temp heading\n",
-    "                start_row += 3  # 1 line gap before subtable data\n",
+    "                # Append the subtable data to the list\n",
+    "                subtables_list.append((None, subtable_data))\n",
     "\n",
-    "                # Write the subtable data to the sheet\n",
-    "                subtable_data.to_excel(writer, sheet_name=sheet_name, startrow=start_row, index=False, header=True)\n",
-    "\n",
-    "                # Move to the next row after writing subtable data\n",
-    "                start_row += len(subtable_data) + 2  # 1 line gap after subtable data\n",
-    "\n",
-    "            # Add a 2-line gap after each Mapped L3 section\n",
-    "            start_row += 1  # Ensure at least 1 line gap after each L3 section\n",
+    "        # Write subtables to Excel with proper gaps\n",
+    "        for item in subtables_list:\n",
+    "            if item[0]:  # If it's a heading\n",
+    "                worksheet.cell(row=start_row, column=1, value=item[0])\n",
+    "                start_row += 2  # 2-line gap before next heading or subtable\n",
+    "            elif item[1] is not None:  # If it's subtable data\n",
+    "                item[1].to_excel(writer, sheet_name=sheet_name, startrow=start_row, index=False, header=True)\n",
+    "                start_row += len(item[1]) + 1  # 1-line gap after subtable\n",
     "\n",
     "print(f\"Grouped data with subtables has been saved to {output_file_path}\")\n"
    ]
