--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,15 +3,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3208f325",
+   "id": "3c5d316e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the new and old data from the Excel workbooks\n",
+    "vNew = pd.read_excel('path_to_vNew.xlsx')\n",
+    "vOld = pd.read_excel('path_to_vOld.xlsx')\n",
+    "\n",
+    "# Select the required columns\n",
+    "vNew = vNew[['Employee ID', 'Position Number', 'Level4']]\n",
+    "vOld = vOld[['Employee ID', 'Position Number', 'Level4']]\n",
+    "\n",
+    "# Merge the dataframes on Employee ID\n",
+    "merged_df = pd.merge(vNew, vOld, on='Employee ID', how='outer', suffixes=('_new', '_old'))\n",
+    "\n",
+    "# Create the Status column\n",
+    "merged_df['Status'] = merged_df.apply(\n",
+    "    lambda row: 'new' if pd.isna(row['Position Number_old']) and not pd.isna(row['Position Number_new']) else \n",
+    "                ('left' if pd.isna(row['Position Number_new']) and not pd.isna(row['Position Number_old']) else \n",
+    "                'existing'), axis=1)\n",
+    "\n",
+    "# Save the resulting dataframe to a new Excel file\n",
+    "merged_df.to_excel('path_to_output.xlsx', index=False)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65f9fdb1",
+   "id": "d1967abb",
    "metadata": {},
    "outputs": [],
    "source": [
