--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0fada423",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the Excel files into DataFrames\n",
+    "vNew = pd.read_excel('path_to_vNew.xlsx')\n",
+    "vOld = pd.read_excel('path_to_vOld.xlsx')\n",
+    "\n",
+    "# Ensure column names are properly stripped of leading/trailing spaces\n",
+    "vNew.columns = vNew.columns.str.strip()\n",
+    "vOld.columns = vOld.columns.str.strip()\n",
+    "\n",
+    "# Initialize new columns in vOld with default value 'left'\n",
+    "vOld['Pos Check'] = 'left'\n",
+    "vOld['BF4 Check'] = 'left'\n",
+    "vOld['Country Check'] = 'left'\n",
+    "\n",
+    "# Perform the lookup and update the values for matching Employee Ids\n",
+    "vOld.loc[vOld['Employee ID'].isin(vNew['Employee ID']), 'Pos Check'] = vOld.loc[vOld['Employee ID'].isin(vNew['Employee ID']), 'Employee ID'].map(vNew.set_index('Employee ID')['Position Number'])\n",
+    "vOld.loc[vOld['Employee ID'].isin(vNew['Employee ID']), 'BF4 Check'] = vOld.loc[vOld['Employee ID'].isin(vNew['Employee ID']), 'Employee ID'].map(vNew.set_index('Employee ID')['BF Level 4 Name'])\n",
+    "vOld.loc[vOld['Employee ID'].isin(vNew['Employee ID']), 'Country Check'] = vOld.loc[vOld['Employee ID'].isin(vNew['Employee ID']), 'Employee ID'].map(vNew.set_index('Employee ID')['Work Location Country/Territory Name'])\n",
+    "\n",
+    "# Display the updated vOld DataFrame\n",
+    "print(vOld)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3c5d316e",
    "metadata": {},
    "outputs": [],
