--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fada423",
+   "id": "0a346553",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the Excel files into DataFrames\n",
+    "vNew = pd.read_excel('path_to_vNew.xlsx')\n",
+    "vOld = pd.read_excel('path_to_vOld.xlsx')\n",
+    "\n",
+    "# Ensure column names are properly stripped of leading/trailing spaces\n",
+    "vNew.columns = vNew.columns.str.strip()\n",
+    "vOld.columns = vOld.columns.str.strip()\n",
+    "\n",
+    "# Initialize new columns in vOld with default value 'left'\n",
+    "vOld['Pos Check'] = 'left'\n",
+    "vOld['BF4 Check'] = 'left'\n",
+    "vOld['Country Check'] = 'left'\n",
+    "\n",
+    "# Perform the lookup and update the values for matching Employee Ids\n",
+    "vOld.loc[vOld['Employee ID'].isin(vNew['Employee ID']), 'Pos Check'] = vOld.loc[vOld['Employee ID'].isin(vNew['Employee ID']), 'Employee ID'].map(vNew.set_index('Employee ID')['Position Number'])\n",
+    "vOld.loc[vOld['Employee ID'].isin(vNew['Employee ID']), 'BF4 Check'] = vOld.loc[vOld['Employee ID'].isin(vNew['Employee ID']), 'Employee ID'].map(vNew.set_index('Employee ID')['BF Level 4 Name'])\n",
+    "vOld.loc[vOld['Employee ID'].isin(vNew['Employee ID']), 'Country Check'] = vOld.loc[vOld['Employee ID'].isin(vNew['Employee ID']), 'Employee ID'].map(vNew.set_index('Employee ID')['Work Location Country/Territory Name'])\n",
+    "\n",
+    "# Create the 'In Scope' column\n",
+    "vOld['In Scope'] = ((vOld['Pos Check'] != vOld['Position Number']) | \n",
+    "                    (vOld['BF4 Check'] != vOld['BF Level 4 Name']) | \n",
+    "                    (vOld['Country Check'] != vOld['Work Location Country/Territory Name'])).apply(lambda x: 'Movement' if x else 'No Movement')\n",
+    "\n",
+    "# Create 'Position Changed', 'BF Changed', and 'Country Changed' columns\n",
+    "vOld['Position Changed'] = vOld.apply(lambda row: 'Left' if row['Pos Check'] == 'left' else ('Yes' if row['Pos Check'] != row['Position Number'] else 'No'), axis=1)\n",
+    "vOld['BF Changed'] = vOld.apply(lambda row: 'Left' if row['BF4 Check'] == 'left' else ('Yes' if row['BF4 Check'] != row['BF Level 4 Name'] else 'No'), axis=1)\n",
+    "vOld['Country Changed'] = vOld.apply(lambda row: 'Left' if row['Country Check'] == 'left' else ('Yes' if row['Country Check'] != row['Work Location Country/Territory Name'] else 'No'), axis=1)\n",
+    "\n",
+    "# Display the updated vOld DataFrame\n",
+    "print(vOld)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dc18cad",
    "metadata": {},
    "outputs": [],
    "source": [
