--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4255e94a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the Excel files into DataFrames\n",
+    "vNew = pd.read_excel('path_to_vNew.xlsx')\n",
+    "vOld = pd.read_excel('path_to_vOld.xlsx')\n",
+    "\n",
+    "# Select relevant columns from vNew and vOld\n",
+    "vNew = vNew[['Employee ID', 'Position Number', 'Level4']]\n",
+    "vOld = vOld[['Employee ID', 'Position Number', 'Level4']]\n",
+    "\n",
+    "# Merge vNew and vOld on Employee ID\n",
+    "merged_df = pd.merge(vNew, vOld, on='Employee ID', suffixes=('_new', '_old'), how='left')\n",
+    "\n",
+    "# Rename columns to match the required format\n",
+    "merged_df.rename(columns={'Position Number_new': 'new Position Number',\n",
+    "                          'Level4_new': 'new Level4',\n",
+    "                          'Position Number_old': 'old Position Number',\n",
+    "                          'Level4_old': 'old Level4'}, inplace=True)\n",
+    "\n",
+    "# Display the final DataFrame\n",
+    "print(merged_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0a346553",
    "metadata": {},
    "outputs": [],
