--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1deeca00",
+   "id": "84a3fad2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,30 @@
     "merged_df['Position Changed'] = merged_df.apply(\n",
     "    lambda row: 'New' if pd.isna(row['old Position Number']) or pd.isna(row['old Level4']) else 'No Change', axis=1)\n",
     "\n",
+    "# Fetch records from vOld where Employee ID is not in vNew\n",
+    "not_in_vNew = vOld[~vOld['Employee ID'].isin(vNew['Employee ID'])]\n",
+    "\n",
+    "# Rename columns to match the format of merged_df\n",
+    "not_in_vNew.rename(columns={\n",
+    "    'Position Number': 'old Position Number',\n",
+    "    'Level4': 'old Level4'\n",
+    "}, inplace=True)\n",
+    "\n",
+    "# Add new columns with default values for records not in vNew\n",
+    "not_in_vNew['new Position Number'] = None\n",
+    "not_in_vNew['new Level4'] = None\n",
+    "not_in_vNew['Position Changed'] = 'Left'\n",
+    "\n",
+    "# Reorder columns to match the merged_df structure\n",
+    "not_in_vNew = not_in_vNew[['Employee ID', 'new Position Number', 'new Level4', 'old Position Number', 'old Level4', 'Position Changed']]\n",
+    "\n",
+    "# Concatenate the two DataFrames\n",
+    "final_df = pd.concat([merged_df, not_in_vNew], ignore_index=True)\n",
+    "\n",
+    "# Display the final DataFrame\n",
+    "print(final_df)\n",
+    "\n",
+    "\n",
     "# Display the final DataFrame\n",
     "print(merged_df)\n"
    ]
@@ -39,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73500319",
+   "id": "da0fdbe6",
    "metadata": {},
    "outputs": [],
    "source": [
